// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrayOfMedia should match the normalizr-arrayOfPost-schema 1`] = `
ArraySchema {
  "schema": EntitySchema {
    "_getId": [Function],
    "_idAttribute": "slug",
    "_key": "posts",
    "_mergeStrategy": [Function],
    "_processStrategy": [Function],
    "schema": Object {
      "author": EntitySchema {
        "_getId": [Function],
        "_idAttribute": "id",
        "_key": "users",
        "_mergeStrategy": [Function],
        "_processStrategy": [Function],
        "schema": Object {},
      },
      "comments": Array [
        EntitySchema {
          "_getId": [Function],
          "_idAttribute": "id",
          "_key": "comments",
          "_mergeStrategy": [Function],
          "_processStrategy": [Function],
          "schema": Object {
            "commenter": EntitySchema {
              "_getId": [Function],
              "_idAttribute": "id",
              "_key": "users",
              "_mergeStrategy": [Function],
              "_processStrategy": [Function],
              "schema": Object {},
            },
          },
        },
      ],
      "tags": Array [
        EntitySchema {
          "_getId": [Function],
          "_idAttribute": "id",
          "_key": "tags",
          "_mergeStrategy": [Function],
          "_processStrategy": [Function],
          "schema": Object {
            "processStrategy": [Function],
          },
        },
      ],
    },
  },
}
`;

exports[`post schema should match the normalizr-post-schema 1`] = `
EntitySchema {
  "_getId": [Function],
  "_idAttribute": "slug",
  "_key": "posts",
  "_mergeStrategy": [Function],
  "_processStrategy": [Function],
  "schema": Object {
    "author": EntitySchema {
      "_getId": [Function],
      "_idAttribute": "id",
      "_key": "users",
      "_mergeStrategy": [Function],
      "_processStrategy": [Function],
      "schema": Object {},
    },
    "comments": Array [
      EntitySchema {
        "_getId": [Function],
        "_idAttribute": "id",
        "_key": "comments",
        "_mergeStrategy": [Function],
        "_processStrategy": [Function],
        "schema": Object {
          "commenter": EntitySchema {
            "_getId": [Function],
            "_idAttribute": "id",
            "_key": "users",
            "_mergeStrategy": [Function],
            "_processStrategy": [Function],
            "schema": Object {},
          },
        },
      },
    ],
    "tags": Array [
      EntitySchema {
        "_getId": [Function],
        "_idAttribute": "id",
        "_key": "tags",
        "_mergeStrategy": [Function],
        "_processStrategy": [Function],
        "schema": Object {
          "processStrategy": [Function],
        },
      },
    ],
  },
}
`;
